# freesynd

freesynd/trunk/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO.txt  build_app.sh  configure  configure.ac  embed.sh  freesynd.ini
freesynd/trunk/data/lang/: english.lng  french.lng  german.lng  italian.lng
freesynd/trunk/data/ref/: original_data.crc
freesynd/trunk/projects/dev-cpp/: FreeSynd.dev  copy-dll.bat
freesynd/trunk/projects/visualc9/: freesynd.vcproj
freesynd/trunk/src/: CMakeLists.txt  Makefile.am  SDLMain.m  agent.cpp  agent.h  agentmanager.cpp  agentmanager.h  app.cpp  app.h  briefmenu.cpp  common.h  config.h  confmenu.cpp  cp437.h  debriefmenu.cpp  default_ini.h  dump.cpp  freesynd.cpp  gameplaymenu.cpp  ipastim.cpp  ipastim.h  keys.h  loadsavemenu.cpp  loadsavemenu.h  logoutmenu.h  map.cpp  map.h  mapmanager.cpp  mapmanager.h  mapmenu.cpp  mapobject.cpp  mapobject.h  menumanager.cpp  menumanager.h  mission.cpp  mission.h  missionmanager.cpp  missionmanager.h  mod.cpp  mod.h  (+26 more)
freesynd/trunk/src/core/: actions.h  appcontext.h  gamecontroller.cpp  gamecontroller.h  gameevent.h  gamesession.cpp  gamesession.h  missionbriefing.cpp  missionbriefing.h  research.cpp  research.h  researchmanager.cpp  researchmanager.h  squad.cpp  squad.h
freesynd/trunk/src/editor/: editorapp.cpp  editorapp.h  editormenufactory.cpp  editormenuid.h  fontmenu.h  gfxmenu.cpp  gfxmenu.h  logoutmenu.cpp  mainmenu.cpp  mainmenu.h
freesynd/trunk/src/gfx/: dirtylist.cpp  dirtylist.h  fliplayer.cpp  fliplayer.h  font.cpp  font.h  fontmanager.cpp  fontmanager.h  screen.cpp  screen.h  sprite.cpp  spritemanager.cpp  tile.cpp  tile.h  tilemanager.cpp  tilemanager.h
freesynd/trunk/src/menus/: agentselectorrenderer.cpp  agentselectorrenderer.h  briefmenu.cpp  briefmenu.h  confmenu.cpp  confmenu.h  debriefmenu.cpp  debriefmenu.h  flimenu.cpp  flimenu.h  gamemenufactory.cpp  gameplaymenu.cpp  gameplaymenu.h  loadingmenu.cpp  loadingmenu.h  loadsavemenu.cpp  loadsavemenu.h  logoutmenu.cpp  logoutmenu.h  mainmenu.cpp  mainmenu.h  mapmenu.cpp  mapmenu.h  maprenderer.cpp  maprenderer.h  menu.cpp  menu.h  menumanager.cpp  menumanager.h  minimaprenderer.cpp  minimaprenderer.h  researchmenu.cpp  researchmenu.h  selectmenu.cpp  selectmenu.h  squadselection.cpp  squadselection.h  widget.cpp  widget.h
freesynd/trunk/src/model/: leveldata.h  objectivedesc.cpp  objectivedesc.h  weaponholder.cpp
freesynd/trunk/src/sound/: audio.cpp  music.h  musicmanager.cpp  musicmanager.h  sdlmixermusic.cpp  sdlmixermusic.h  sdlmixersound.cpp  sdlmixersound.h  sound.h  soundmanager.cpp  soundmanager.h  xmidi.cpp
freesynd/trunk/src/tools/: copy_but.cpp  embed.c  osx.cmake
freesynd/trunk/src/utils/: ccrc32.cpp  ccrc32.h  configfile.cpp  configfile.h  dernc.h  file.cpp  file.h  log.cpp  portablefile.cpp  seqmodel.cpp  seqmodel.h  timer.h
freesynd/trunk/src/utils/utf8/: core.h
libsyndicate-0.13/doc/latex/: Makefile.am  Makefile.in
libsyndicate-0.13/doc/latex/picts/: Makefile.am
libsyndicate-0.13/doc/latex/picts/src/: Animation.dia  Ipa.dia  Menus.dia  RncBitstream.dia  Tile.dia
libsyndicate-0.13/example/: Animation.cc  Makefile.am  Makefile.in  Map.h  main_anim.cc  main_font.cc  main_frame.cc  main_game.cc  main_hreq.cc  main_map.cc  main_mapcol.cc  main_mapdata.cc  main_maptile.cc  main_palette.cc  main_raw.cc
libsyndicate-0.13/lib/: Bitstream.cc  Colors.cc  Game.cc  Main.cc  Makefile.am  MapData.cc  MapSubTile.cc  Req.cc  SpriteAnim.cc  SpriteData.cc  SpriteElement.cc  SpriteFrame.cc
libsyndicate-0.13/lib/Syndicate/Data/: Bitstream.h  Colors.h  Debug.h  Endianess.h  Font.h  Game.h  HuffmanTable.h  Int.h  MapTile.h  Mission.h  Raw.h  Req.h  Rnc.h  SpriteAnim.h  SpriteData.h
libsyndicate-0.13/test/: Makefile.am  TestBlock.cc  TestBlock.h  TestFont.cc  TestMapTile.cc  TestMapTile.h  TestSpriteTab.cc  TestSpriteTab.h
trunk/freesynd/src/: Makefile  Makefile.am  agent.cpp  agent.h  agentmanager.cpp  agentmanager.h  app.c  app.cpp  app.h  audio.cpp  avatar.c  avatar.h  briefmenu.cpp  briefmenu.h  chronos.c  chronos.h  common.h  config.h  confmenu.cpp  confmenu.h  debriefmenu.cpp  debriefmenu.h  dump.cpp  dumpmaps.cpp  fliplayer.c  fliplayer.cpp  font.cpp  font.h  freesynd.cpp  gaia.c  gaia.h  gameplaymenu.cpp  gameplaymenu.h  hugin.c  hugin.h  keys.h  loadingmenu.cpp  loadsavemenu.cpp  loadsavemenu.h  logoutmenu.cpp  (+68 more)
trunk/freesynd/src/core/: Makefile  gameevent.h  gamesession.cpp  gamesession.h  research.cpp  research.h  researchmanager.cpp  researchmanager.h
trunk/freesynd/src/gfx/: dirtylist.cpp  dirtylist.h  fontmanager.cpp  fontmanager.h  screen.cpp
trunk/freesynd/src/menus/: widget.cpp  widget.h
trunk/freesynd/src/music/: mod.synintro
trunk/freesynd/src/scripts/: config.lua  dir.lua  gaoler.lua  sprites.lua
trunk/freesynd/src/sound/: Makefile  audio.h  musicmanager.h  sdlmixermusic.cpp  sdlmixermusic.h  soundmanager.h  xmidi.h
trunk/freesynd/src/utils/: Makefile  configfile.cpp  dernc.cpp  file.cpp  file.h  log.cpp  log.h  seqmodel.h
trunk/libsyndicate-0.13/: Makefile.am  Makefile.in  aclocal.m4  configure.ac
trunk/libsyndicate-0.13/demo/opengl/: Data.cc  Data.h  Main.cc  Makefile.am  Sight.cc  Sight.h  Tiles.h
trunk/libsyndicate-0.13/demo/sdl/: Game.cc  Makefile.am  Makefile.in  Sdl.h
trunk/libsyndicate-0.13/doc/doxygen/: Doxyfile  Makefile.am  Makefile.in
trunk/libsyndicate-0.13/doc/latex/: libsyndicate.tex
trunk/libsyndicate-0.13/doc/latex/picts/: Makefile.in
trunk/libsyndicate-0.13/example/: Animation.h  Map.cc  main_file.cc  main_sprite.cc
trunk/libsyndicate-0.13/lib/: Block.cc  Debug.cc  File.cc  Font.cc  HuffmanTable.cc  Makefile.in  MapColumn.cc  MapTile.cc  Palette.cc  Raw.cc  Rnc.cc  SpriteTab.cc
trunk/libsyndicate-0.13/lib/Syndicate/Data/: Block.h  File.h  MapColumn.h  MapData.h  MapSubTile.h  (+5 more)
trunk/libsyndicate-0.13/test/: Makefile.in  TestFont.h  TestInt.cc  TestMapData.cc  TestMapData.h  TestPalette.cc  TestPalette.h
trunk/libsyndicate-0.13/tool/: Makefile.am  Makefile.in  README  Screenshot.cc  Screenshot.h  difference
(+625 files in other folders)
