SUBDIRS = src

fsdatadir = ${datarootdir}/freesynd
nobase_dist_fsdata_DATA = data/cursors/cursors.png \
	data/music/assassinate.mp3 \
	data/music/assassinate.ogg \
	data/music/intro.mp3 \
	data/music/intro.ogg \
	data/lang/english.lng \
	data/lang/french.lng \
	data/lang/german.lng \
	data/lang/italian.lng \
	data/ref/research.dat
